# monkey-hammer

./: .gitignore  CMakeLists.txt  NOTICE.md  README.md
cmake/: compiler_settings.cmake  doxygen.cmake  external_dependencies.cmake  initialize_project_version.cmake  make_uninstall.cmake  resolve_platform.cmake
cmake/platform/: apple.cmake  linux.cmake  windows.cmake
codemonkey/: CMakeLists.txt
codemonkey/source/: codemonkey.cpp
doc/: monkey-comment.md  monkey-text2array.md
doxygen/: doxygen.config
monkey-comment/: CMakeLists.txt
monkey-comment/source/: monkey-comment.cpp
monkey-text2array/: CMakeLists.txt
monkey-text2array/source/: monkey-text2array.cpp
monkeylib/: CMakeLists.txt
monkeylib-test/: CMakeLists.txt  cppunit_main.cpp  design_patterns_test.cpp  environment_tests.cpp  error_test.cpp  file_utilities_tests.cpp  version_test.cpp
monkeylib-test/configuration/: monkey_hammer_config_test.cpp
monkeylib/include/monkeylib/core/: Version.h  VersionConfig.h  VersionConfig.h.in  core_exports.h  environment.h  error.h  escape_encode.h  file_utilities.h  languages.h  monkey-hammer.h  monkey_errors.h
monkeylib/include/monkeylib/core/configuration/: configuration_file.h  git_config.h  monkey_hammer_config.h
monkeylib/include/monkeylib/core/formatters/: comment_formatter.h  string_array_formatter.h
monkeylib/include/monkeylib/core/patterns/: command.h
monkeylib/source/: environment.cpp  error.cpp  escape_encode.cpp  file_utilities.cpp  languages.cpp  monkey_errors.cpp  version.cpp
monkeylib/source/configuration/: configuration_file.cpp  monkey_hammer_config.cpp
monkeylib/source/formatters/: comment_formatter.cpp  string_array_formatter.cpp
